--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,8 @@
     <link rel="stylesheet" href="./vendor/font-awesome/css/font-awesome.min.css"></link>
     <link rel="stylesheet" href="./app/assets/css/style.css"></link>
     <link rel="stylesheet" href="./index.css"></link>
+    <script src="ng-tags-input.js"></script>
+    <link rel="stylesheet" type="text/css" href="ng-tags-input.css">
 
     <link rel="apple-touch-icon-precomposed" sizes="57x57" href="assets/images/favicon/apple-touch-icon-57x57.png" />
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/images/favicon/apple-touch-icon-114x114.png" />
@@ -38,6 +40,9 @@
     <link rel="icon" type="image/png" href="assets/images/favicon/favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="assets/images/favicon/favicon-16x16.png" sizes="16x16" />
     <link rel="icon" type="image/png" href="assets/images/favicon/favicon-128.png" sizes="128x128" />
+
+
+
 
     <!-- 2. Configure SystemJS -->
     <script src="./system.config.js"></script>
