--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,14 @@
     <script src="./vendor/es6-shim/es6-shim.min.js"></script>
     <script src="./vendor/systemjs/system-polyfills.js"></script>
 
-    <script src="./vendor/angular2/angular2-polyfills.js"></script>
     <script src="./vendor/systemjs/system.src.js"></script>
     <script src="./vendor/rxjs/Rx.js"></script>
+
+    <!--script src="./vendor/angular2/angular2-polyfills.js"></script>
     <script src="./vendor/angular2/angular2.dev.js"></script>
     <script src="./vendor/angular2/http.js"></script>
-    <script src="./vendor/angular2/router.js"></script>
+    <script src="./vendor/angular2/router.js"></script-->
+
     <script src="./vendor/jquery/jquery.min.js"></script>
     <script src="./vendor/bootstrap/js/bootstrap.min.js"></script>
     <script src="./vendor/ng2-bootstrap/ng2-bootstrap.min.js"></script>
