--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- 1. Load libraries -->
-    <script src="./vendor/es6-shim/es6-shim.min.js"></script>
-    <script src="./vendor/systemjs/system-polyfills.js"></script>
-
-    <script src="./vendor/systemjs/system.src.js"></script>
-    <script src="./vendor/rxjs/Rx.js"></script>
+    <script src="./vendor/es6-shim/es6-shim.js"></script>
+    <script src="./vendor/reflect-metadata/Reflect.js"></script>
+    <script src="./vendor/systemjs/dist/system.src.js"></script>
+    <script src="./vendor/zone.js/dist/zone.js"></script>
 
     <!--script src="./vendor/angular2/angular2-polyfills.js"></script>
     <script src="./vendor/angular2/angular2.dev.js"></script>
@@ -27,26 +26,28 @@
     <link rel="stylesheet" href="./app/assets/css/style.css"></link>
     <link rel="stylesheet" href="./index.css"></link>
 
-    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="assets/images/favicon/apple-touch-icon-57x57.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/images/favicon/apple-touch-icon-114x114.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/images/favicon/apple-touch-icon-72x72.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/images/favicon/apple-touch-icon-144x144.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="60x60" href="assets/images/favicon/apple-touch-icon-60x60.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="assets/images/favicon/apple-touch-icon-120x120.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="assets/images/favicon/apple-touch-icon-76x76.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="assets/images/favicon/apple-touch-icon-152x152.png" />
-    <link rel="icon" type="image/png" href="assets/images/favicon/favicon-196x196.png" sizes="196x196" />
-    <link rel="icon" type="image/png" href="assets/images/favicon/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/png" href="assets/images/favicon/favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="assets/images/favicon/favicon-16x16.png" sizes="16x16" />
-    <link rel="icon" type="image/png" href="assets/images/favicon/favicon-128.png" sizes="128x128" />
-
-
-
+    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="app/assets/images/favicon/apple-touch-icon-57x57.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="app/assets/images/favicon/apple-touch-icon-114x114.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="app/assets/images/favicon/apple-touch-icon-72x72.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="app/assets/images/favicon/apple-touch-icon-144x144.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="60x60" href="app/assets/images/favicon/apple-touch-icon-60x60.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="app/assets/images/favicon/apple-touch-icon-120x120.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="app/assets/images/favicon/apple-touch-icon-76x76.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="app/assets/images/favicon/apple-touch-icon-152x152.png" />
+    <link rel="icon" type="image/png" href="app/assets/images/favicon/favicon-196x196.png" sizes="196x196" />
+    <link rel="icon" type="image/png" href="app/assets/images/favicon/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/png" href="app/assets/images/favicon/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="app/assets/images/favicon/favicon-16x16.png" sizes="16x16" />
+    <link rel="icon" type="image/png" href="app/assets/images/favicon/favicon-128.png" sizes="128x128" />
 
     <!-- 2. Configure SystemJS -->
-    <script src="./system.config.js"></script>
+    <!--script src="./system.config.js"></script-->
 
+    <script src="./system.config.js"></script>
+    
+    <script>
+        System.import('app/bootstrap.js').catch(function(err){ console.error(err); });
+    </script>
 </head>
 
 <body>
@@ -54,3 +55,4 @@
 </body>
 
 </html>
+
