--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,9 @@
     <script src="./vendor/bootstrap/js/bootstrap.min.js"></script>
     <script src="./vendor/ng2-bootstrap/ng2-bootstrap.min.js"></script>
 
+    <link rel="stylesheet" type="text/css" href="./vendor/primeui/themes/omega/theme.css"></link>
+    <link rel="stylesheet" type="text/css" href="./vendor/primeui/primeui-ng-all.min.css"></link>
+
     <link rel="stylesheet" href="./vendor/bootstrap/css/bootstrap.min.css"></link>
     <link rel="stylesheet" href="./vendor/bootstrap/css/bootstrap-theme.min.css"></link>
     <link rel="stylesheet" href="./vendor/font-awesome/css/font-awesome.min.css"></link>
